--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,16 @@
 </head>
 <body>
 
-    {% block body %}{% endblock %}
+<!--Странная отловка сообщений-->
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    {% for message in messages %}
+        <li>{{ message }}</li>
+    {% endfor %}
+{% endif %}
+{% endwith %}
+
+{% block body %}{% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
