--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,21 +3,18 @@
 <div class="container">
     <div class="row">
         <div class="text-center my-2">
-            <h1>
+            <h3>
 
-                Git check alive
+                git_check_alive
 
-            </h1>
-            <form action="" method="post" novalidate>
+            </h3>
+             <form action="/" method="POST">
                 {{ form.hidden_tag() }}
-                {{ form.link.label }}<br>
-                {{ form.link(size=128) }}
-                <!--Странная отловка ошибок-->
-                {% for error in form.link.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-                {% endfor %}
-                {{ form.submit() }}
+                {{ form.link_repository.label }}<br>
+                {{ form.link_repository(size=128) }}
+                {{ form.submit_path() }}
             </form>
+            {{ json }}
         </div>
     </div>
 </div>
