--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,13 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
 
-        Git check alive
+        git_check_alive
 
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+<header>
+
+
+<!--<nav class="navbar navbar-inverse">-->
+<!--    <div class="container-fluid">-->
+<!--        <div class="navbar-header">-->
+<!--            <a class="navbar-brand" href="#">WebSiteName</a>-->
+<!--        </div>-->
+<!--        <ul class="nav navbar-nav">-->
+<!--            <li class="active"><a href="#">Home</a></li>-->
+<!--            <li><a href="#">Page 1</a></li>-->
+<!--            <li><a href="#">Page 2</a></li>-->
+<!--        </ul>-->
+<!--        <form class="navbar-form navbar-left" action="/action_page.php">-->
+<!--            <div class="form-group">-->
+<!--                <input type="text" class="form-control" placeholder="Search">-->
+<!--            </div>-->
+<!--            <button type="submit" class="btn btn-default">Submit</button>-->
+<!--        </form>-->
+<!--    </div>-->
+<!--</nav>-->
+
+
+</header>
 
 {% block body %}{% endblock %}
 
