--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -15,24 +15,24 @@
 <header>
 
 
-<!--<nav class="navbar navbar-inverse">-->
-<!--    <div class="container-fluid">-->
-<!--        <div class="navbar-header">-->
-<!--            <a class="navbar-brand" href="#">WebSiteName</a>-->
-<!--        </div>-->
-<!--        <ul class="nav navbar-nav">-->
-<!--            <li class="active"><a href="#">Home</a></li>-->
-<!--            <li><a href="#">Page 1</a></li>-->
-<!--            <li><a href="#">Page 2</a></li>-->
-<!--        </ul>-->
-<!--        <form class="navbar-form navbar-left" action="/action_page.php">-->
-<!--            <div class="form-group">-->
-<!--                <input type="text" class="form-control" placeholder="Search">-->
-<!--            </div>-->
-<!--            <button type="submit" class="btn btn-default">Submit</button>-->
-<!--        </form>-->
-<!--    </div>-->
-<!--</nav>-->
+    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
+        style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
+                    aria-selected="true">Поиск
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
+                    aria-selected="false">Помощь
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+                    aria-selected="false">Контакты
+            </button>
+        </li>
+    </ul>
 
 
 </header>
