--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -8,12 +8,31 @@
                 git_check_alive
 
             </h3>
-             <form action="/" method="POST">
+            <form action="/" method="POST">
+                <button type="button" class="btn btn-dark">Dark</button>
                 {{ form.link_repository.label }}<br>
                 {{ form.link_repository(size=128) }}
                 {{ form.submit_path() }}
             </form>
             {{ json }}
+
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                    Выпадающий список
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
+                    </li>
+                    <li>
+                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
+                    </li>
+                    <li>
+                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
