--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -8,8 +8,16 @@
                 git_check_alive
 
             </h3>
+
+            <form action="/">
+                <div class="container">
+                    <button class="btn">
+                        OkkeY
+                    </button>
+                </div>
+            </form>
             <form action="/" method="POST">
-                <button type="button" class="btn btn-dark">Dark</button>
+                <!--                <button type="button" class="btn btn-dark">Dark</button>-->
                 {{ form.link_repository.label }}<br>
                 {{ form.link_repository(size=128) }}
                 {{ form.submit_path() }}
