--- a/frontend/templates/help.html
+++ b/frontend/templates/help.html
@@ -1,29 +1,32 @@
-IntDays - целое число, количество полных дней прошедших с указанного события
+{% extends "base.html" %}
+{% block body %}
 
-Общие данные
-repo_owner_login - Логин владельца репозитория
-repo_name - Имя репозитория
-repo_description - Описание
-repo_stars_count - Количество звезд
-repo_version - Версия проекта
-repo_homepage_url - Страница проекта (при наличии)
-repo_created_at - Дата создания репозитория
-repo_duration - IntDays, время существования репозитория
-repo_updated_at - IntDays, последнее обновление репозитория (изменения не в файлах)
-repo_pushed_at - IntDays, последний пуш репозитория (изменения в файлах)
-repo_in_organization - Принадлежность проекта к организации
-repo_license_have - Есть ли у проекта лицензионное соглашение
-repo_is_archived_bool - Проекта заархивирован (только для чтения)
-repo_is_disabled_bool
-repo_is_locked_bool
-repo_is_empty_bool
-repo_is_fork_bool
-repo_issues_total_count - Общее количество issues
-repo_watchers_total_count
-repo_fork_total_count
+IntDays - целое число, количество полных дней прошедших с указанного события <p>
 
-Метки и вопросы
-repo_labels_name_list - Все существующие labels (список)
+Общие данные <p>
+repo_owner_login - Логин владельца репозитория <p>
+repo_name - Имя репозитория <p>
+repo_description - Описание <p>
+repo_stars_count - Количество звезд <p>
+repo_version - Версия проекта <p>
+repo_homepage_url - Страница проекта (при наличии) <p>
+repo_created_at - Дата создания репозитория <p>
+repo_duration - IntDays, время существования репозитория <p>
+repo_updated_at - IntDays, последнее обновление репозитория (изменения не в файлах) <p>
+repo_pushed_at - IntDays, последний пуш репозитория (изменения в файлах) <p>
+repo_in_organization - Принадлежность проекта к организации <p>
+repo_license_have - Есть ли у проекта лицензионное соглашение <p>
+repo_is_archived_bool - Проекта заархивирован (только для чтения) <p>
+repo_is_disabled_bool <p>
+repo_is_locked_bool <p> <p>
+repo_is_empty_bool <p>
+repo_is_fork_bool <p>
+repo_issues_total_count - Общее количество issues <p>
+repo_watchers_total_count <p>
+repo_fork_total_count <p>
+ <p>
+Метки и вопросы <p>
+repo_labels_name_list - Все существующие labels (список) <p>
 repo_labels_bug_list - Все labels содержащие слово 'bug' (список)
 bug_issues_total_count - Общее количество issues с bug-меткой
 bug_issues_closed_total_count - Количество закрытых issues с bug-меткой
@@ -52,3 +55,5 @@ request_balance - Остаток на балансе (изначально 5000/
 request_reset - Дата время восстановления баланса (datetime в формате str)
 
 v1.0 от 28.01.2023
+
+{% endblock %}
