--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,47 +1,18 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="container">
+
+<form>
     <div class="row">
-        <div class="text-center my-2">
-            <h3>
-
-                git_check_alive
-
-            </h3>
-
-            <form action="/">
-                <div class="container">
-                    <button class="btn">
-                        OkkeY
-                    </button>
-                </div>
-            </form>
-            <form action="/" method="POST">
-                <!--                <button type="button" class="btn btn-dark">Dark</button>-->
-                {{ form.link_repository.label }}<br>
-                {{ form.link_repository(size=128) }}
-                {{ form.submit_path() }}
-            </form>
-            {{ json }}
-
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                    Выпадающий список
-                </button>
-                <ul class="dropdown-menu">
-                    <li>
-                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
-                    </li>
-                    <li>
-                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
-                    </li>
-                    <li>
-                        <button class="dropdown-item" type="button">Элемент выпадающего списка</button>
-                    </li>
-                </ul>
-            </div>
+        <div class="form-group col-xs-10 col-sm-8 col-md-8 col-lg-8">
+            <label for="exampleInputPath">Repository Path</label>
+            <input type="text" class="form-control" id="exampleInputPath" placeholder="Enter Repository Path">
+            <small id="emailHelp" class="form-text text-muted">'https://github.com/Vi-812/git_check_alive' or
+                'vi-812/git_check_alive'</small>
+        </div>
+        <div class="col-2">
+            <button type="submit" class="btn btn-success">Submit</button>
         </div>
     </div>
-</div>
+</form>
+
 {% endblock %}
