--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 
-<form>
+
+
+<form action="/" method="post" autocomplete="off">
     <div class="row">
         <div class="form-group col-xs-10 col-sm-8 col-md-8 col-lg-8">
             <label for="exampleInputPath">Repository Path</label>
