Вывод index.html

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>
@@ -12,10 +13,11 @@
     </title>
 </head>
 <body>
-
+<div class="container">
 
 <nav class="navbar navbar-expand">
     <div class="nav mx-auto col-xs-12 col-sm-8 col-md-8 col-lg-8">
+
         <div class="navbar-header">
             <img src="https://freelance.ru/img/portfolio/pics/00/31/8F/3248032.jpg" width="70"
                  height="51" alt="Лого">
@@ -37,9 +39,6 @@
         </ul>
     </div>
 </nav>
-
-
-<div class="container-fluid" style="background-color: #ccffe6">
 
     {% block body %}{% endblock %}
 
