--- a/frontend/templates/buf.html
+++ b/frontend/templates/buf.html
@@ -1,3 +1,15 @@
+<ul>
+    {% for j in data %}
+    <li>{{ j }}</li>
+    <ul>
+        {% for k in j %}
+        <li>{{ k }}</li>
+        {% endfor %}
+    </ul>
+    {% endfor %}
+</ul>
+
+
 <div class="container">
     <div class="row">
         <div class="text-center my-2">
@@ -14,13 +26,7 @@
                     </button>
                 </div>
             </form>
-            <form action="/" method="POST">
-                <!--                <button type="button" class="btn btn-dark">Dark</button>-->
-                {{ form.link_repository.label }}<br>
-                {{ form.link_repository(size=128) }}
-                {{ form.submit_path() }}
-            </form>
-            {{ json }}
+
 
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
