Frontend, навел порядок на страницах, разместил вспомогательную информацию

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -11,6 +11,11 @@
         git_check_alive
 
     </title>
+    <style type="text/css">
+		body {
+		  font-size: 16px;
+		}
+	</style>
 </head>
 <body>
 <div class="container">
@@ -28,17 +33,18 @@
                 <a class="nav-link" href="/">Check Alive</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/help">Help</a>
+                <a class="nav-link" href="/values">Values</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">REST API</a>
+                <a class="nav-link" href="/rest-api">REST API</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Сontact</a>
+                <a class="nav-link" href="/contact">Сontact</a>
             </li>
         </ul>
     </div>
 </nav>
+<hr>
 
     {% block body %}{% endblock %}
 
