Приводим в порядок README.md, мелкие правки, поправлен CLI

--- a/frontend/templates/values.html
+++ b/frontend/templates/values.html
@@ -12,7 +12,7 @@
     <li><b>description</b> - описание</li>
     <li><b>stars</b> - количество звезд</li>
     <li><b>createdAt</b> - дата создания</li>
-    <li><b>duration</b> - время существования (дней)</li>
+    <li><b>existenceTime</b> - время существования (дней)</li>
     <li><b>updatedAt</b> - время с последнего обновления (дней)</li>
     <li><b>pushedAt</b> - время с последнего push-обновления кода (дней)</li>
     <li><b>version</b> - текущая версия проекта</li>
@@ -37,8 +37,8 @@
 <br>
 <h2>ERROR</h2>
 <ul>
-    <li><b>description</b> - описание ошибки</li>
-    <li><b>message</b> - текст ошибки</li>
+    <li><b>errorDescription</b> - описание ошибки</li>
+    <li><b>errorMessage</b> - текст ошибки</li>
 </ul>
 <br>
 <h2>META</h2>
