--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -24,7 +24,7 @@
 <div class="container">
 
     <nav class="navbar navbar-expand">
-        <div class="nav mx-auto col-xs-12 col-sm-8 col-md-8 col-lg-8">
+        <div class="nav mx-auto">
 
             <div class="navbar-header">
                 <a class="nav-link" href="/">
