--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -5,12 +5,26 @@
     <h1>Контакты</h1>
 </div>
 <br>
-<p>Мы на GitHub <a href="https://github.com/Vi-812/git_check_alive">https://github.com/Vi-812/git_check_alive</a></p>
-<p>Вопросы и предложения оставлять <a href="https://github.com/Vi-812/git_check_alive/issues">тут</a></p>
-<p>Почта для связи: <a href="mailto:vi812x@gmail.com">vi812x@gmail.com</a></p>
-<p>Телефон для связи: 8 (XXX) XXX-XX-XX</p>
-<p>Юридический адрес: Россия, Санкт-Петербург</p>
-<p>Фактический адрес: Россия, Санкт-Петербург</p>
-<p>Время работы: 10:00 - 10:30 (по нерабочим дням)</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+
+        <p>Мы на GitHub <a
+                href="https://github.com/Vi-812/git_check_alive">https://github.com/Vi-812/git_check_alive</a></p>
+        <p>Вопросы и предложения оставлять <a href="https://github.com/Vi-812/git_check_alive/issues">тут</a></p>
+        <p>Почта для связи: <a href="mailto:vi812x@gmail.com">vi812x@gmail.com</a></p>
+        <p>Телефон для связи: 8 (XXX) XXX-XX-XX</p>
+        <p>Юридический адрес: Россия, Санкт-Петербург</p>
+        <p>Фактический адрес: Россия, Санкт-Петербург</p>
+        <p>Время работы: 10:00 - 10:30 (по нерабочим дням)</p>
+
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+
+        <script type="text/javascript" charset="utf-8" async
+                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A63630798e69b9306c57cdcd0279df83a336e568bc30577321444639201e544d8&amp;width=400&amp;height=300&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
+</div>
+<br>
+<br>
 
 {% endblock %}
