--- a/app/frontend/templates/base.html
+++ b/app/frontend/templates/base.html
@@ -11,15 +11,35 @@
         git_check_alive
 
     </title>
-    <style type="text/css">
 
-		body {
-		  font-size: 16px;
-		}
+    <style>
+    body {
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        font-size: 16px;
+    }
 
+    form {
+        width: 100%;
+        padding: 0 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
+    input[type="text"] {
+        flex-grow: 1;
+        box-sizing: border-box;
+    }
+
+    input[type="submit"] {
+        flex-shrink: 0;
+        margin-left: 10px;
+    }
     </style>
 </head>
+
 <body>
 <div class="container">
 
